[package]
name = "rmate"
version = "1.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.3", features = ["unix"] }
tempfile = "3"
structopt = "0.3"
log = "0.4"
env_logger = "0.8.4"
gethostname = "0.2.1"
fork = "0.1.12"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
dirs = "3.0"

# hostname = "0.3"

[profile.release]
lto = "fat"

[dev-dependencies]
version-sync = "0.8"
