[package]
name = "rmate"
version = "1.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.3", features = ["unix"] }
tempfile = "3"
structopt = "0.3"
log = "0.4"
env_logger = "0.8.4"
gethostname = "0.2.1"
fork = "0.1.12"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
dirs = "3.0"

# hostname = "0.3"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
[dev-dependencies]
version-sync = "0.8"
