[package]
name = "rmate"
version = "1.1.19"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.3", features = ["unix"] }
tempfile = "3"
structopt = "0.3"
log = "0.4"
env_logger = "0.10"
gethostname = "0.4.3"
fork = "0.1.12"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
dirs = "5.0"

# hostname = "0.3"

[profile.release]
lto = "fat"
opt-level = 3     # Optimize for size.
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[dev-dependencies]
version-sync = "0.8"
